細かい修正

--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -1,5 +1,34 @@
 ## About
 
-> The English language can not fully capture the depth and complexity of my thoughts. So I'm incorporating Emoji into my speech to better express myself. Winky face.
+### 京都産業大学情報理工学部の 2 回生です。
 
-You know the way you feel when you see a picture of two otters holding hands? That's how you're gonna feel every day. My mother cried the day I was born because she knew she’d never be prettier than me. You should make me your campaign manager. I was born for politics. I have great hair and I love lying. Captain? The kids want to know where Paulie the Pigeon is. I told them he got sucked up into an airplane engine, is that all right?
+<p>現在興味のある技術はフロントエンドです。特に、React.jsを勉強しています。</p>
+
+#### 経歴
+
+<ul>
+  <li>
+    <p>
+      2020.4~ <strong>京都産業大学入学</strong>
+    </p>
+    <p>データサイエンス、情報システムを専攻</p>
+  </li>
+  <li>
+    <p>
+      2021.9~2022.2 <strong>ブリッジコーポレーションにて長期インターン</strong>
+    </p>
+    <p>
+      主にWordPressを用いたシステム開発に従事。
+      <br />
+      新規コーポレートサイト作成、サイト修正作業、illustratorを用いたイベント用テンプレートの作成
+    </p>
+  </li>
+  <li>
+    <p>
+      2022.2~現在 <strong>SNSマーケティング</strong>
+    </p>
+    <p>
+      インスタグラムを用いたSNSマーケティングに従事しています。画像加工やライティングなど全般を担当。
+    </p>
+  </li>
+</ul>
