--- a/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
@@ -1,3 +1,11 @@
-## Get in touch
+## Contact
 
-Visit [my website](https://www.lekoarts.de?utm_source=cara&utm_medium=Starter) or find me on other platforms: [Twitter](https://www.twitter.com/lekoarts_de) & [LinkedIn](https://www.linkedin.com/in/lennart-joergens/)
+<p>お気軽にご連絡ください。</p>- <a href='href="https://twitter.com/kitsune_yk'>
+  [Twitter]
+</a>- <a href="https://www.linkedin.com/yuki-matsuishi-239970220/">
+  [LinkedIn]
+</a>
+- <a href="https://www.instagram.com/kitsune_yk/">[Instagram]</a>- <a href="https://www.youtube.com/channel/UCda09m8gx2U4zGPufhloPag/featured">
+  [youtube]
+</a>
+- <a href="https://github.com/yk-mt12">[github]</a>
