--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,4 @@
-# Hi, I'm Your Name
+# Welocome to Kitsune's page
 
-Template by [lekoarts.de](https://www.lekoarts.de?utm_source=cara&utm_medium=Starter) - I write about JavaScript and React there!
+京都の大学生「kitsune」です。
+コンピュータサイエンスを専攻しています。現在はフロントエンドに興味があります。
