リンクの修正

--- a/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
@@ -1,11 +1,22 @@
 ## Contact
 
-<p>お気軽にご連絡ください。</p>- <a href='href="https://twitter.com/kitsune_yk'>
-  [Twitter]
-</a>- <a href="https://www.linkedin.com/yuki-matsuishi-239970220/">
-  [LinkedIn]
-</a>
-- <a href="https://www.instagram.com/kitsune_yk/">[Instagram]</a>- <a href="https://www.youtube.com/channel/UCda09m8gx2U4zGPufhloPag/featured">
-  [youtube]
-</a>
-- <a href="https://github.com/yk-mt12">[github]</a>
+<p>お気軽にご連絡ください。</p>
+<ul style="list-style:none;">
+  <li>
+    <a href='href="https://twitter.com/kitsune_yk'>[Twitter]</a>
+  </li>
+  <li>
+    <a href="https://www.linkedin.com/yuki-matsuishi-239970220/">[LinkedIn]</a>
+  </li>
+  <li>
+    <a href="https://www.instagram.com/kitsune_yk/">[Instagram]</a>
+  </li>
+  <li>
+    <a href="https://www.youtube.com/channel/UCda09m8gx2U4zGPufhloPag/featured">
+      [youtube]
+    </a>
+  </li>
+  <li>
+    <a href="https://github.com/yk-mt12">[github]</a>
+  </li>
+</ul>
