--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,4 +1,5 @@
-# Welocome to Kitsune's page
+# Welocome to Kitsune's portfolio
 
-京都の大学生「kitsune」です。
-コンピュータサイエンスを専攻しています。現在はフロントエンドに興味があります。
+京都の大学生「kitsune」です。<br/>
+コンピュータサイエンスを専攻しています。<br/>
+フロントエンドに興味があります。
