--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -1,31 +1,32 @@
 ## Blog
 <ProjectCard
-  title=""
+  title="準備中..."
   link=""
   bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
 >
+コンテンツ更新準備中
 </ProjectCard>
 
 <ProjectCard
-  title=""
+  title="準備中..."
   link=""
   bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
 >
-
+コンテンツ更新準備中
 </ProjectCard>
 
 <ProjectCard
-  title=""
+  title="準備中..."
   link=""
   bg="linear-gradient(to right, #009245 0%, #FCEE21 100%)"
 >
-
+コンテンツ更新準備中
 </ProjectCard>
 
 <ProjectCard
-  title=""
+  title="準備中..."
   link=""
   bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
 >
-
+コンテンツ更新準備中
 </ProjectCard>
