メタの修正、プロジェクトの追加

--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -1,32 +1,32 @@
 ## Blog
 <ProjectCard
-  title="準備中..."
-  link=""
+  title="Blog Site"
+  link="https://kitsune-blog.tokyo"
   bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
 >
-コンテンツ更新準備中
+Gatsby, Netlify, Netlify CMSで作成したブログサイトです。
 </ProjectCard>
 
 <ProjectCard
-  title="準備中..."
-  link=""
+  title="京都ノートルダム女子大学"
+  link="https://www.notredame.ac.jp/"
   bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
 >
-コンテンツ更新準備中
+サイトの細かい修正作業。html,css。
 </ProjectCard>
 
 <ProjectCard
-  title="準備中..."
+  title=""
   link=""
   bg="linear-gradient(to right, #009245 0%, #FCEE21 100%)"
 >
-コンテンツ更新準備中
+Coming soon...
 </ProjectCard>
 
 <ProjectCard
-  title="準備中..."
+  title=""
   link=""
   bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
 >
-コンテンツ更新準備中
+Coming soon...
 </ProjectCard>
