--- a/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
@@ -19,4 +19,7 @@
   <li>
     <a href="https://github.com/yk-mt12">[github]</a>
   </li>
+  <li>
+    <a href="https://www.kitsune-blog.tokyo">[Blog]</a>
+  </li>
 </ul>
