コピーライトの編集

--- a/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
@@ -20,6 +20,6 @@
     <a href="https://github.com/yk-mt12">[github]</a>
   </li>
   <li>
-    <a href="https://www.kitsune-blog.tokyo">[Blog]</a>
+    <a href="https://www.kitsune-blog.">[Blog]</a>
   </li>
 </ul>
