--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -1,10 +1,11 @@
-## Blog
+## Project
+
 <ProjectCard
-  title="Blog Site"
+  title="Kitsune Blog"
   link="https://kitsune-blog.tokyo"
   bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
 >
-Gatsby, Netlify, Netlify CMSで作成したブログサイトです。
+  Gatsby, Netlify, Netlify CMSで作成したブログサイトです。
 </ProjectCard>
 
 <ProjectCard
@@ -12,21 +13,18 @@ Gatsby, Netlify, Netlify CMSで作成したブログサイトです。
   link="https://www.notredame.ac.jp/"
   bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
 >
-サイトの細かい修正作業。html,css。
+  サイトの細かい修正作業など。
 </ProjectCard>
 
 <ProjectCard
-  title=""
+  title="Coming soon..."
   link=""
   bg="linear-gradient(to right, #009245 0%, #FCEE21 100%)"
->
-Coming soon...
-</ProjectCard>
+></ProjectCard>
 
 <ProjectCard
-  title=""
+  title="Coming soon..."
   link=""
   bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
 >
-Coming soon...
 </ProjectCard>
