translate to english

--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -1,34 +1,39 @@
 ## About
 
-### 京都産業大学情報理工学部の 2 回生です。
+### I am a second year student of the Faculty of Information Science and Engineering at Kyoto Sangyo University.
 
-<p>現在興味のある技術はフロントエンドです。特に、React.jsを勉強しています。</p>
+<p>
+  My current technology of interest is front-end. <br />
+  In particular, I am studying React.js.
+</p>
 
-#### 経歴
+#### Career
 
 <ul>
   <li>
     <p>
-      2020.4~ <strong>京都産業大学入学</strong>
+      2020.4~ <strong>Entered Kyoto Sangyo University</strong>
     </p>
-    <p>データサイエンス、情報システムを専攻</p>
+    <p>Majored in data science, information systems, and network systems</p>
   </li>
   <li>
     <p>
-      2021.9~2022.2 <strong>ブリッジコーポレーションにて長期インターン</strong>
+      2021.9~2022.2 <strong>Long-term internship at Bridge Corporation</strong>
     </p>
     <p>
-      主にWordPressを用いたシステム開発に従事。
+      Mainly engaged in system development using WordPress.
       <br />
-      新規コーポレートサイト作成、サイト修正作業、illustratorを用いたイベント用テンプレートの作成
+      Creation of new corporate website, site modification work, creation of
+      templates for events using illustrator
     </p>
   </li>
   <li>
     <p>
-      2022.2~現在 <strong>SNSマーケティング</strong>
+      2022.2~ <strong>SNS Marketing - Director</strong>
     </p>
     <p>
-      インスタグラムを用いたSNSマーケティングに従事しています。画像加工やライティングなど全般を担当。
+      I'm a dictator in SNS marketing using Instagram. Responsible for all
+      aspects of image processing and writing.
     </p>
   </li>
 </ul>
