--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -3,28 +3,28 @@
 <ProjectCard
   title="Kitsune Blog"
   link="https://kitsune-blog.tokyo"
-  bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
+  bg="linear-gradient(to right, #7fbfff 0%, #ffc184 100%)"
 >
-  Gatsby, Netlify, Netlify CMSで作成したブログサイトです。
+  This is a blog site created with Gatsby, Netlify and Netlify CMS.
 </ProjectCard>
 
 <ProjectCard
-  title="京都ノートルダム女子大学"
-  link="https://www.notredame.ac.jp/"
-  bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
+  title="Bridge Corporation - Long Term Internship"
+  link="https://www.bridge-net.co.jp/"
+  bg="linear-gradient(to right, #ff8484 0%, #89c4ff 100%)"
 >
-  サイトの細かい修正作業など。
+  PHP, Wordpress, HTML, CSS<br/>
+  Development of new corporate website and modification of existing website
 </ProjectCard>
 
 <ProjectCard
   title="Coming soon..."
   link=""
-  bg="linear-gradient(to right, #009245 0%, #FCEE21 100%)"
+  bg="linear-gradient(to right, #00947a 0%, #a4a8d4 100%)"
 ></ProjectCard>
 
 <ProjectCard
   title="Coming soon..."
   link=""
-  bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
->
-</ProjectCard>
+  bg="linear-gradient(to right, #b33e5c 0%, #0075c2 100%)"
+></ProjectCard>
