--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -18,10 +18,12 @@
 </ProjectCard>
 
 <ProjectCard
-  title="Coming soon..."
-  link=""
+  title="Todo App"
+  link="https://github.com/yk-mt12/react-todo"
   bg="linear-gradient(to right, #00947a 0%, #a4a8d4 100%)"
-></ProjectCard>
+>
+勉強のため、React✖︎Typescriptで作成した簡易Todoアプリです。<br/>
+</ProjectCard>
 
 <ProjectCard
   title="Coming soon..."
