--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -9,24 +9,28 @@
 </ProjectCard>
 
 <ProjectCard
-  title="Bridge Corporation - Long Term Internship"
-  link="https://www.bridge-net.co.jp/"
-  bg="linear-gradient(to right, #ff8484 0%, #89c4ff 100%)"
->
-  PHP, Wordpress, HTML, CSS<br/>
-  Development of new corporate website and modification of existing website
-</ProjectCard>
-
-<ProjectCard
   title="Todo App"
   link="https://github.com/yk-mt12/react-todo"
   bg="linear-gradient(to right, #00947a 0%, #a4a8d4 100%)"
 >
-勉強のため、React✖︎Typescriptで作成した簡易Todoアプリです。<br/>
+  勉強のため、React✖︎Typescriptで作成した簡易Todoアプリです。
+  <br />
 </ProjectCard>
 
 <ProjectCard
-  title="Coming soon..."
-  link=""
+  title="疲れた心に励ましbot"
+  link="https://hagemasite-bot.netlify.app/"
   bg="linear-gradient(to right, #b33e5c 0%, #0075c2 100%)"
-></ProjectCard>
+>
+  Reactで作ってます。周りに病んじゃう子が多いので、少しでも笑ってくれたり、元気になってくれたらいいな。と思って作りました。
+</ProjectCard>
+
+<ProjectCard
+  title="Bridge Corporation - Long Term Internship"
+  link="https://www.bridge-net.co.jp/"
+  bg="linear-gradient(to right, #ff8484 0%, #89c4ff 100%)"
+>
+  PHP, Wordpress, HTML, CSS
+  <br />
+  Development of new corporate website and modification of existing website
+</ProjectCard>
