--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -26,6 +26,7 @@
       Creation of new corporate website, site modification work, creation of
       templates for events using illustrator
     </p>
+    <p><a href="https://www.kitsune-blog.tokyo/Bridge-Internship">Internship participation note</a></p>
   </li>
   <li>
     <p>
