--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -1,11 +1,12 @@
 ## Project
 
 <ProjectCard
-  title="Kitsune Blog"
-  link="https://kitsune-blog.tokyo"
+  title="Good Time with Coffee - Mobile Applications"
+  link="https://good-time-with-coffee.netlify.app/"
   bg="linear-gradient(to right, #7fbfff 0%, #ffc184 100%)"
 >
-  This is a blog site created with Gatsby, Netlify and Netlify CMS.
+Simply enter the amount of coffee to be brewed and the system will convert it to the optimum amount of beans.<br/>
+A stopwatch is also implemented to know the optimal extraction time.
 </ProjectCard>
 
 <ProjectCard
@@ -13,7 +14,7 @@
   link="https://github.com/yk-mt12/react-todo"
   bg="linear-gradient(to right, #00947a 0%, #a4a8d4 100%)"
 >
-  勉強のため、React✖︎Typescriptで作成した簡易Todoアプリです。
+  This is a simple Todo app created in React✖︎Typescript for study purposes.
   <br />
 </ProjectCard>
 
@@ -22,15 +23,13 @@
   link="https://hagemasite-bot.netlify.app/"
   bg="linear-gradient(to right, #b33e5c 0%, #0075c2 100%)"
 >
-  Reactで作ってます。周りに病んじゃう子が多いので、少しでも笑ってくれたり、元気になってくれたらいいな。と思って作りました。
+    There are many friends around me who are sick, so I hope it makes them laugh or cheer up a little. I hope it will make you smile and cheer up.
 </ProjectCard>
 
 <ProjectCard
-  title="Bridge Corporation - Long Term Internship"
-  link="https://www.bridge-net.co.jp/"
+  title="Kitune Blog"
+  link="https://www.kitsune-blog.tokyo"
   bg="linear-gradient(to right, #ff8484 0%, #89c4ff 100%)"
 >
-  PHP, Wordpress, HTML, CSS
-  <br />
-  Development of new corporate website and modification of existing website
+ In this blog, I will post my daily thoughts and lessons learned in a diary-like format.
 </ProjectCard>
