--- a/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
@@ -3,7 +3,7 @@
 <p>お気軽にご連絡ください。</p>
 <ul style="list-style:none;">
   <li>
-    <a href='href="https://twitter.com/kitsune_yk'>[Twitter]</a>
+    <a href="https://twitter.com/kitsune_yk'>[Twitter]</a>
   </li>
   <li>
     <a href="https://www.linkedin.com/yuki-matsuishi-239970220/">[LinkedIn]</a>
@@ -17,6 +17,6 @@
     <a href="https://github.com/yk-mt12">[github]</a>
   </li>
   <li>
-    <a href="https://www.kitsune-blog.">[Blog]</a>
+    <a href="https://www.kitsune-blog.tokyo">[Blog]</a>
   </li>
 </ul>
