--- a/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
@@ -3,7 +3,7 @@
 <p>お気軽にご連絡ください。</p>
 <ul style="list-style:none;">
   <li>
-    <a href="https://twitter.com/kitsune_yk'>[Twitter]</a>
+    <a href="https://twitter.com/kitsune_yk">[Twitter]</a>
   </li>
   <li>
     <a href="https://www.linkedin.com/yuki-matsuishi-239970220/">[LinkedIn]</a>
