--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -1,10 +1,9 @@
 ## About
 
-### I am a second year student of the Faculty of Information Science and Engineering at Kyoto Sangyo University.
+### I am a third year student of the Faculty of Information Science and Engineering at Kyoto Sangyo University.
 
 <p>
-  My current technology of interest is front-end. <br />
-  In particular, I am studying React.js.
+  Currently, I am using react, react native, and developing personal apps.
 </p>
 
 #### Career
@@ -35,6 +34,17 @@
     <p>
       I'm a dictator in SNS marketing using Instagram. Responsible for all
       aspects of image processing and writing.
+    </p>
+  </li>
+  <li>
+    <p>
+        2022.3~ 2022.5 <strong>Short-term internship at AIoT</strong>
+    </p>
+    <p>
+      Functional development of mobile applications for our services.(react, react native, redux, typescript, javascript)
+    </p>
+    <p>
+     Creating a list of legal entities using scraping.(Python)
     </p>
   </li>
 </ul>
