--- a/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
@@ -9,9 +9,7 @@
     <a href="https://www.linkedin.com/yuki-matsuishi-239970220/">[LinkedIn]</a>
   </li>
   <li>
-    <a href="https://www.youtube.com/channel/UCda09m8gx2U4zGPufhloPag/featured">
-      [youtube]
-    </a>
+    <a href="https://www.wantedly.com/id/kitsune_yk">[Wantedly]</a>
   </li>
   <li>
     <a href="https://github.com/yk-mt12">[github]</a>
