--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,5 +1,4 @@
-# Welocome to Kitsune's portfolio
+# Welocome to my portfolio
 
-I'm Kitsune<br/>
 I'm a second year university student majoring in computer science.
 I'm also interested in front-end technologies.
