--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -1,21 +1,21 @@
 ## Project
 
 <ProjectCard
-  title="Good Time with Coffee - Mobile Applications"
+  title="Coffee app ver1.0"
   link="https://good-time-with-coffee.netlify.app/"
   bg="linear-gradient(to right, #7fbfff 0%, #ffc184 100%)"
 >
-Simply enter the amount of coffee to be brewed and the system will convert it to the optimum amount of beans.<br/>
-A stopwatch is also implemented to know the optimal extraction time.
+  <a href="https://github.com/yk-mt12/good-time-with-coffee">github</a> <br />
+  Web app for coffee 1.0
 </ProjectCard>
 
 <ProjectCard
-  title="Todo App"
-  link="https://github.com/yk-mt12/react-todo"
+  title="Coffee app ver2.0"
+  link="https://github.com/yk-mt12/coffee-app-mobile"
   bg="linear-gradient(to right, #00947a 0%, #a4a8d4 100%)"
 >
-  This is a simple Todo app created in React✖︎Typescript for study purposes.
-  <br />
+  <a href="https://github.com/yk-mt12/coffee-app-mobile">github</a> <br />
+  Web app for coffee 2.0
 </ProjectCard>
 
 <ProjectCard
@@ -23,7 +23,10 @@ A stopwatch is also implemented to know the optimal extraction time.
   link="https://hagemasite-bot.netlify.app/"
   bg="linear-gradient(to right, #b33e5c 0%, #0075c2 100%)"
 >
-    There are many friends around me who are sick, so I hope it makes them laugh or cheer up a little. I hope it will make you smile and cheer up.
+ <a href="https://github.com/yk-mt12/hagemasite-bot">github</a> <br />
+There are many friends around me who are sick, so I hope it makes them laugh
+or cheer up a little. I hope it will make you smile and cheer up.
+
 </ProjectCard>
 
 <ProjectCard
@@ -31,5 +34,6 @@ A stopwatch is also implemented to know the optimal extraction time.
   link="https://www.kitsune-blog.tokyo"
   bg="linear-gradient(to right, #ff8484 0%, #89c4ff 100%)"
 >
- In this blog, I will post my daily thoughts and lessons learned in a diary-like format.
+  In this blog, I will post my daily thoughts and lessons learned in a
+  diary-like format.
 </ProjectCard>
